eks-workshop-v2/manifests/base-application/my-own-manifests/catalog/deployment-scaleup-custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 1
