eks-workshop-v2/manifests/base-application/my-own-manifests/catalog/statefulset-mysql-db-scaleup-custom.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: catalog-mysql
spec:
  replicas: 1
