eks-workshop-v2/manifests/base-application/my-own-manifests/catalog/catalog-service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-nodeport
  labels:
    app.kubernetes.io/created-by: eks-workshop
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      nodePort: 30001
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/instance: catalog
    app.kubernetes.io/component: service
