eks-workshop-v2/manifests/base-application/my-own-manifests/catalog/service-mysql-db-pvc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: catalog-mysql-ebs
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: mysql
      protocol: TCP
      name: mysql
  selector:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/instance: catalog
    app.kubernetes.io/component: mysql-ebs
