eks-workshop-v2/manifests/base-application/my-own-manifests/catalog/service-nodePort-mysql-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-mysql-nodeport
  labels:
    app.kubernetes.io/created-by: eks-workshop
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: mysql
      nodePort: 30306
      protocol: TCP
      name: mysql
  selector:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/instance: catalog
    app.kubernetes.io/component: mysql
